--- a/app/views/drugs/_form.html.erb
+++ b/app/views/drugs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @drug do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <div class="col-md-5">
+  <div class="col-sm-5">
   <%= f.label 'Name' %>
   <%= f.text_field :name %>
 
@@ -27,7 +27,7 @@
   <%= f.text_field :generic %>
   </div>
   
-  <div class="col-md-5">
+  <div class="col-sm-5">
   <%= f.label 'Igcodes' %>
   <%= f.text_field :igcodes %>
   
@@ -53,7 +53,7 @@
   <%= f.text_field :cost %>
   </div>
 
-  <div class="col-md-10">
+  <div class="col-sm-10">
   <%= f.text_area :instructions, rows:4, placeholder: 'Instructions' %>
   <%= f.text_area :notes, rows:4, placeholder: 'Notes' %>
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
