--- a/app/views/drugs/edit.html.erb
+++ b/app/views/drugs/edit.html.erb
@@ -1,12 +1,8 @@
 <% provide(:title, 'Edit Medication') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Edit Medication</h1>
 
-<div class="row justify-content-md-center">
-  <div class="col-md-10 col-md-offset-2">
-
+<div class="col-sm-8 col-sm-offset-2"> 
+<h3 class='display-1'>Edit Medication</h3>
 <%= render 'form' %>
-
-  </div>
 </div>
 
