--- a/app/views/drugs/_drug.html.erb
+++ b/app/views/drugs/_drug.html.erb
@@ -22,15 +22,15 @@
 	<% unless current_user.doctor? %>
         <td>
         <% if remote %>
-          <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_drug_path(drug), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+          <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_drug_path(drug), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
         <% else %>
-          <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_drug_path(drug) %>
+          <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_drug_path(drug) %>
         <% end %>
         </td>
         <% end %>
 
   	<% if current_user.admin?  %>
-		<td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, drug, method: :delete, data: { confirm: "Are you sure you want to delete #{drug.name}?" } %> </td>
+		<td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, drug, method: :delete, data: { confirm: "Are you sure you want to delete #{drug.name}?" } %> </td>
 	<% end %>
      </tr>
 
