--- a/app/views/drugs/edit.html.erb
+++ b/app/views/drugs/edit.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, 'Edit Medication') %>
 <% provide(:button_text, 'Save changes') %>
 
 <div class="col-sm-8 col-sm-offset-2"> 
-<h3 class='display-1'>Edit Medication</h3>
+<h3 class='display-1'><%= @drug.name %> : Edit Medication</h3>
 <%= render 'form' %>
 </div>
 
