--- a/app/views/drugs/_edit.html.erb
+++ b/app/views/drugs/_edit.html.erb
@@ -1,11 +1,10 @@
 <%
-   provide(:title, 'Edit Medication')
    provide(:button_text, 'Save changes')
 %>
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @drug.name %> :  Edit</b>
+	<b class="modal-title" id="myModalLabel"><%= @drug.name %> :  Edit Medication</b>
 </div>
 <div class="modal-body">
        <%= render 'form' %>
