--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,16 +1,15 @@
 <% provide(:title, 'All Medications') %>
 <%= render "shared/modal", size: 'lg' %>
 
+<h3 class="display-1">Full list of medications</h3>
 <table class="tbl2 table-hover table-striped table-bordered" >
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
-          <th class="tbl_md">Dnum</th>
           <th>Streng.</th>
 	  <th>Dose</th>
 	  <th>Freq.</th>
 	  <th>Amount</th>
-	  <th>Status</th>
 	  <th>Generic</th>
 	  <th>Igcodes</th>
 	  <th>Format</th>
