--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'All Medications') %>
 <%= render "shared/modal", size: 'lg' %>
 
-<h3 class="display-1">Full list of medications</h3>
 <table class="tbl2 table-hover table-striped table-bordered" >
+	<caption>Full list of medications </caption>
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
@@ -11,7 +11,6 @@
 	  <th>Freq.</th>
 	  <th>Amount</th>
 	  <th>Generic</th>
-	  <th>Igcodes</th>
 	  <th>Format</th>
 	  <th>Route</th>
 	  <th>Dur.Cnt</th>
