--- a/app/views/drugs/new.html.erb
+++ b/app/views/drugs/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:button_text, 'Save') %>
 
-<div class="col-sm-8 col-sm-offset-2"> 
+<div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3"> 
    <h3 class='display-1'>New Medication</h3>
 
 	<%= render 'form' %>
