--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'All Medications') %>
-<%= render "shared/modal", size: 'lg' %>
+<%= render "shared/modal" %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
 	<caption>Full list of medications </caption>
