--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -6,17 +6,16 @@
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
+	  <th>Generic Name</th>
           <th>Streng.</th>
 	  <th>Dose</th>
 	  <th>Freq.</th>
 	  <th>Amount</th>
-	  <th>Generic</th>
 	  <th>Format</th>
 	  <th>Route</th>
 	  <th>Dur.Cnt</th>
 	  <th>Dur.Unit</th>
 	  <th>Refills</th>
-	  <th>Type</th>
 	  <%# if current_user.doctor? %>
 	    <th class='tbl_sm'></th>
 	    <th class='tbl_sm'></th>
