--- a/app/views/drugs/_show.html.erb
+++ b/app/views/drugs/_show.html.erb
@@ -4,7 +4,7 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @drug.name %> </b>
+	<b class="modal-title" id="myModalLabel">Medication <%= @drug.name %> - Details </b>
 </div>
 <div class="modal-body">
        <%= render 'form' %>
