--- a/app/views/drugs/show.html.erb
+++ b/app/views/drugs/show.html.erb
@@ -6,20 +6,17 @@
 <div class="row justify-content-md-center">
   <div class="col-md-6 col-md-offset-3">
      <pre>
-	Dnum:       <%= @drug.dnum %>
-	Strength:   <%= @drug.strength %>
-	Dose:       <%= @drug.dose %>
-	Frequency:  <%= @drug.freq %>
-	Amount:     <%= @drug.amount %>
-	Status:     <%= @drug.status %>
-	Generic:    <%= @drug.generic %>
-	IGCodes:    <%= @drug.igcodes %>
-	Format:     <%= @drug.format %>
-	Route:      <%= @drug.route %>
-	Dur. Cnt:   <%= @drug.dur_cnt %>
-	Dur. Unit:  <%= @drug.dur_unit %>
-	Refills:    <%= @drug.refills %>
-	Type:       <%= @drug.dtype %>
+	Generic name: <%= @drug.generic %>
+	Strength:     <%= @drug.strength %>
+	Dose:         <%= @drug.dose %>
+	Frequency:    <%= @drug.freq %>
+	Amount:       <%= @drug.amount %>
+	Format:       <%= @drug.format %>
+	Route:        <%= @drug.route %>
+	Dur. Cnt:     <%= @drug.dur_cnt %>
+	Dur. Unit:    <%= @drug.dur_unit %>
+	Refills:      <%= @drug.refills %>
+	Price:        <%= @drug.cost %>
 	Instructions: <%= @drug.instructions %>
 	Notes:        <%= @drug.notes %>
     </pre>
