--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -29,12 +29,11 @@
 </table>
 
 
-<div class="row>
+<div class="row">
 <div class="bottom_buttons ">
 <%= button_to "Add Medication", new_drug_path, class: "btn btn-primary col-md-2", method: :get %>
 </div>
 
 <div class="bottom_nav">
 <%= will_paginate @drugs, class: "btn" %>
-</div>
 </div>
