--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -22,6 +22,10 @@
   <%# button_to 'Register', patients_lookup_path, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary", method: 'get' %>
   <%= button_to 'Register', patients_lookup_path, class:"btn btn-primary", method: 'get' %>
   </div>
+  <div style="width:100px;display:none" id="login_button">
+  <%= button_to 'Log In', new_user_session_path, class:"btn btn-primary", method: 'get' %>
+  </div>
+
   </div>
   <div class="col-md-4 pt-3">
     <div class="text-muted" style="font-size: 1.1em;">
@@ -42,8 +46,8 @@
 
 <script>
 $(document).ready(function() {
-
 var ohip_num = document.getElementById("patient_ohip_num");
+
 $(ohip_num).keyup(function () {
   if ($(this).val().length > 11 ) {
      var val = $(this).val().replace(/\W/g,'');
