--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All Medications') %>
 <%= render "shared/modal" %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
