--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -34,6 +34,6 @@
 <%= button_to "Add Medication", new_drug_path, class: "btn btn-primary col-md-2", method: :get %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagonation">
 <%= will_paginate @drugs, class: "btn" %>
 </div>
